--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
- {
+{
   "scripts": {
     "test": "tsc -p . && mocha",
     "prepublish": "tsc -p ."
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "mocha-typescript":  "^1.0.22"
   }
-  }
+}
