--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
-    "mocha-typescript":  "^1.0.22"
+    "mocha-typescript": "^1.0.22",
+    "ts-md5": "^1.2.0"
   }
 }
